# springboot/calc/src/main/java/com/method51/calc/web/CalcController.java
@@ -1,40 +1,46 @@
 package com.method51.calc.web;
 
+import java.math.BigDecimal;
+
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
-import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
 import com.method51.calc.service.RemoteCalcService;
+import com.method51.swagger.api.CalcApi;
+import com.method51.swagger.model.CalcResult;
 
 @RestController
-public class CalcController {
+public class CalcController implements CalcApi {
 
     @Autowired
     private RemoteCalcService remoteCalcService;
 
-    class CalcResult{
-        String result;
-        public CalcResult(String pResult){
-            result=pResult;
-        }
-        public String getResult(){
-            return result;
-        }
-         public void setResult(String pResult){
-            result=pResult;
-        }
+
+
+    /**
+     * @see com.method51.swagger.api.CalcApi#calcMultiplyGet(java.lang.Double,
+     *      java.lang.Double)
+     */
+    @Override
+    public ResponseEntity<CalcResult> multiply(BigDecimal pA, BigDecimal pB) {
+        CalcResult result = new CalcResult();
+        result.setResult(pA.multiply(pB).toString());
+        return ResponseEntity.ok(result);
     }
 
-    @RequestMapping(value = "/calc/plus", method = RequestMethod.GET)
-    public CalcResult warpedPlus(@RequestParam Integer a, @RequestParam Integer b) {
-        return new CalcResult(remoteCalcService.plus(a, b));
-    }
 
-    @RequestMapping(value = "/calc/multiply", method = RequestMethod.GET)
-    public CalcResult multiply(@RequestParam Integer a, @RequestParam Integer b) {
-        return  new CalcResult(String.valueOf(a*b));
-    }
 
+    /**
+     * @see com.method51.swagger.api.CalcApi#calcPlusGet(java.lang.Double,
+     *      java.lang.Double)
+     */
+    @Override
+    public ResponseEntity<CalcResult> plus(BigDecimal pA, BigDecimal pB) {
+
+        CalcResult result = new CalcResult();
+        result.setResult(remoteCalcService.plus(pA.intValue(), pB.intValue()));
+        return ResponseEntity.ok(result);
+
+    }
 }
